Prerender: remove possible race in browser tests to improve flakiness.

There may be a race condition that causes flakiness in the form of timeouts in
several prerender browser tests involving waiting for prerender contents to be
created. As I have not been able to reproduce the flakiness locally, I'm not
sure this is actually a fix for the flakes. Fingers are crossed and wood is
being knocked.

BUG=657025

Review-Url: https://chromiumcodereview.appspot.com/2434813004
Cr-Commit-Position: refs/heads/master@{#426446}

Former-commit-id: 9b665496e6c89667a23ae09138fd982132664b40