chrome/browser/prerender/prerender_test_utils.h
@@ -153,9 +153,9 @@ class TestPrerender : public PrerenderContents::Observer,
   TestPrerenderContents* contents() const { return contents_; }
   int number_of_loads() const { return number_of_loads_; }
 
-  void WaitForCreate() { create_loop_.Run(); }
-  void WaitForStart() { start_loop_.Run(); }
-  void WaitForStop() { stop_loop_.Run(); }
+  void WaitForCreate();
+  void WaitForStart();
+  void WaitForStop();
 
   // Waits for |number_of_loads()| to be at least |expected_number_of_loads| OR
   // for the prerender to stop running (just to avoid a timeout if the prerender
@@ -178,6 +178,9 @@ class TestPrerender : public PrerenderContents::Observer,
 
   int expected_number_of_loads_;
   std::unique_ptr<base::RunLoop> load_waiter_;
+
+  bool started_;
+  bool stopped_;
 
   base::RunLoop create_loop_;
   base::RunLoop start_loop_;
